# InterXAI

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  requirements.txt
.github/workflows/: backend-ci.yml  ci.yml  deploy.yml  django.yml  frontend-ci.yml  issue-automation.yml
backend/: .env.example  Dockerfile  Dockerfile.taskiq  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py
bot/: views.py
core/: .env.example  db.sqlite3  manage.py
core/career/: __init__.py  admin.py  external_jobs.py  models.py  resource_searcher.py  resume_cv_views.py  serializers.py  urls.py  views.py
core/core/: settings.py  urls.py
core/feedback/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
core/interview/: admin.py  models.py  serializers.py  urls.py  views.py
core/opportunities/: __init__.py  admin.py  models.py  serializers.py  urls.py  views.py
core/organization/: admin.py  models.py  serializers.py  urls.py  views.py
core/users/: urls.py  views.py
frontend/: .dockerignore  Dockerfile  nginx.conf
interview_bot/: db.sqlite3  settings.py
organization/: models.py
src/: index.css
tools/: piston_bootstrap.py  vision_lint
users/: views.py
vision/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  mypy.ini  pyproject.toml  ruff.toml
vision/app/: config.py  exceptions.py  main.py  mediapipe_detector.py  model_assets.py  schemas.py  utils.py
vision/app/interfaces/: detector_interface.py
(+167 files in other folders)
